# reaktoro-pse

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: checks.yml
src/reaktoro_pse/: __init__.py  reaktoroBlock.py  reaktoro_block.py
src/reaktoro_pse/core/: reaktoro_block_builder.py  reaktoro_gray_box.py  reaktoro_inputs.py  reaktoro_jacobian.py  reaktoro_outputs.py  reaktoro_solver.py  reaktoro_state.py
src/reaktoro_pse/core/pyomo_property_writer/: property_functions.py
src/reaktoro_pse/core/tests/: test_reaktoro_builder.py  test_reaktoro_inputs.py  test_reaktoro_jacobian.py  test_reaktoro_outputs.py  test_reaktoro_solver.py  test_reaktoro_state.py
src/reaktoro_pse/core/util_classes/: rktInputs.py  rkt_inputs.py
src/reaktoro_pse/examples/: biogas_combustion.py  simple_desalination.py  simple_ion_exchange.py  themal_precipitation.py  thermal_precipitation.py
src/reaktoro_pse/examples/reaktoro_pse_to_phreeqc_comparison/: acid_base_addition_comparison.py  comparison_utils.py  precipitation_comparison.py  solution_mixing_comparison.py  standard_model.py  vapor_pressure_comparison.py  water_removal_comparison.py
src/reaktoro_pse/examples/tests/: test_examples.py
src/reaktoro_pse/reaktoro_block_config/: input_options.py  jacobian_options.py  reaktoro_solver_options.py
src/reaktoro_pse/tests/: test_reaktoroBlock.py  test_reaktoro_block.py  test_solvers.py  test_version.py
src/reaktoro_pse/tutorials/: ReaktoroBlock_tutorial.ipynb  basic_reaktoro_block_interaction.ipynb  integration_with_ro.ipynb
(+4 files in other folders)
